# lan-file-transfer

./: .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  build.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/lantransfer/: __init__.py  __main__.py  app.py  client.py  discovery.py  server.py  state.py  transfer.py  utils.py
