[project]
name = "lantransfer"
version = "1.0.0"
description = "Cross-platform LAN file transfer tool with automatic device discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LAN Transfer Team" }]
keywords = ["file-transfer", "lan", "network", "gui", "cross-platform"]

dependencies = [
    "flet>=0.25.0",
    "aiohttp>=3.9.0",
    "zeroconf>=0.136.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]
dev = ["ruff>=0.8.0", "mypy>=1.13.0"]

[project.scripts]
lantransfer = "lantransfer.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lantransfer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true


